bin = [
  { name = "main", path = "src/main.rs" },
  { name = "day_1", path = "src/Advent-of-Rust_2024/Day_1.rs" },
  { name = "day_2", path = "src/Advent-of-Rust_2024/Day_2.rs" },
  { name = "day_3", path = "src/Advent-of-Rust_2024/Day_3.rs" },
  { name = "day_4", path = "src/Advent-of-Rust_2024/Day_4.rs" },
  { name = "day_5", path = "src/Advent-of-Rust_2024/Day_5.rs" },
  { name = "day_6", path = "src/Advent-of-Rust_2024/Day_6.rs" },
  { name = "day_7", path = "src/Advent-of-Rust_2024/Day_7.rs" },
  { name = "day_8", path = "src/Advent-of-Rust_2024/Day_8.rs" },
  { name = "day_9", path = "src/Advent-of-Rust_2024/Day_9.rs" },
  { name = "day_10", path = "src/Advent-of-Rust_2024/Day_10.rs" },
  { name = "day_11", path = "src/Advent-of-Rust_2024/Day_11.rs" },
  { name = "day_12", path = "src/Advent-of-Rust_2024/Day_12.rs" },
  { name = "day_13", path = "src/Advent-of-Rust_2024/Day_13.rs" },
]

[package]
name = "advent-of-rust"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
